update transaction model to credit and account

--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -1,3 +1,14 @@
 @import "bootstrap-sprockets";
 
 @import "bootstrap";
+
+a {
+    background-color: none;
+    color: blue;
+    text-decoration: none;
+}
+
+a.button-list {
+    text-decoration: none;
+}
+
