--- a/app/views/cash_accounts/show.html.erb
+++ b/app/views/cash_accounts/show.html.erb
@@ -12,3 +12,6 @@
 
 <%= link_to 'Edit', edit_cash_account_path(@cash_account) %> |
 <%= link_to 'Back', cash_accounts_path %>
+
+<%= render template: "transactions/cash_transactions"  %>
+<br>
