--- a/app/views/cash_accounts/index.html.erb
+++ b/app/views/cash_accounts/index.html.erb
@@ -1,29 +1,17 @@
 <p id="notice"><%= notice %></p>
 
-<h1>Listing Cash Accounts</h1>
-
-<table>
-  <thead>
-    <tr>
-      <th>Name</th>
-      <th>Balance</th>
-      <th colspan="3"></th>
-    </tr>
-  </thead>
-
-  <tbody>
-    <% @cash_accounts.each do |cash_account| %>
-      <tr>
-        <td><%= cash_account.name %></td>
-        <td><%= cash_account.balance %></td>
-        <td><%= link_to 'Show', cash_account %></td>
-        <td><%= link_to 'Edit', edit_cash_account_path(cash_account) %></td>
-        <td><%= link_to 'Destroy', cash_account, method: :delete, data: { confirm: 'Are you sure?' } %></td>
-      </tr>
-    <% end %>
-  </tbody>
-</table>
-
+<h1>Cash Accounts</h1>
+<br>
+<div class="page-content-col">
+  <div class="row">
+    <div class="col-md-6 col-md-offset-3">
+      <% @cash_accounts.each do |cash_account| %>
+        <%= link_to "#{cash_account.name}    $#{cash_account.balance}", cash_account_path(cash_account), class:"button-list", role: "button" %> 
+        <br>
+      <% end %>
+    </div>  
+  </div>
+</div>
 <br>
 
 <%= link_to 'New Cash account', new_cash_account_path %>
