--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,31 +1,37 @@
-<h1>Pages#home</h1>
-<p>Find me in app/views/pages/home.html.erb</p>
+<div class="page-content">
+  <nav class="navbar navbar-default" role="navigation">
+    <div class="container-fluid">
+      <div class="navbar-header">
+        <a class="navbar-brand" href="#" >Money Tracker   </a>
+      </div>
+      
+      <%= image_tag 'sunset.jpg', class: "img-circle", size: "50x40" %>
+      <%= image_tag 'sky.jpg', class: "img-circle", size: "50x40" %>
+    </div>
+  </nav>
 
-<h1>Home Page</h1>
+  <div class="page-content-col">
+    <div class="row">
+      <div class="col-md-6 col-md-offset-3">
+        <a href="<%= cash_accounts_path %>" class="btn btn-success btn-lg btn-block" role="button">Cash on Hand<br>Balance: $<%#= @cash.balance %></a>
+        <a href="<%= bank_accounts_path %>" class="btn btn-info btn-lg btn-block" role="button">Bank Account<br>Balance: $<%#= @bank.balance %></a>
+        <a href="<%= bills_path %>" class="btn btn-warning btn-lg btn-block" role="button">Bills due this month<br>Total</a>
+        <a href="<%= credit_cards_path %>" class="btn btn-danger btn-lg btn-block" role="button">Credit Card Debt<br>Balance</a>
+      </div>
+    </div>
+  </div>
+</div>
 
-<%= image_tag 'sunset.jpg' %>
-<%= image_tag 'sky.jpg', align: 'center' %>
-
-<%#= link_to('All Accounts', accounts_path, class: 'btn btn-success btn-sm', role: 'button')  %>
-
-<div class="row">
-  <div class="col-md-6 col-md-offset-3">
-    <a href="<%#= account_path(@cash) %>" class="btn btn-success btn-lg btn-block" role="button">Cash on Hand<br>Balance: $<%#= @cash.balance %></a>
-    <a href="<%#= account_path(@bank) %>" class="btn btn-info btn-lg btn-block" role="button">Bank Account<br>Balance: $<%#= @bank.balance %></a>
-    <a href="#" class="btn btn-warning btn-lg btn-block" role="button">Bills due this month<br>Total</a>
-    <a href="#" class="btn btn-danger btn-lg btn-block" role="button">Credit Card Debt<br>Balance</a>
-    
-    
-    <a href="#<%#= account_path(@bill) %>" class="btn btn-warning btn-lg btn-block" role="button">Bills due this month<br>
-      <table class="table">
-        <%# @bill.each do | bill | %>
-          <tr>
-            <td><%#= bill.name %></td>
-            <td><%#= number_to_currency(bill.balance) %></td>
-          </tr>
-        <%# end %>
-      </table>
-    </a>
+  <!--<a href="#<%#= account_path(@bill) %>" class="btn btn-warning btn-lg btn-block" role="button">Bills due this month<br>-->
+    <!--  <table class="table">-->
+    <!--    <%# @bill.each do | bill | %>-->
+    <!--      <tr>-->
+    <!--        <td><%#= bill.name %></td>-->
+    <!--        <td><%#= number_to_currency(bill.balance) %></td>-->
+    <!--      </tr>-->
+    <!--    <%# end %>-->
+    <!--  </table>-->
+    <!--</a>-->
     
     <!--<a href="<%#= account_path(@bank) %>" class="btn btn-info btn-lg btn-block" role="button">Bank Account<br>Balance: $<%#= @bank.balance %></a>-->
     
@@ -40,12 +46,3 @@
     
     <%#= link_to 'Cash', account_path(@cash), class: "btn btn-success btn-lg btn-block" %>
     <%#= link_to('Cash on Hand', account_path(@cash), class: 'btn btn-success btn-lg btn-block', role: 'button')  %>
-    
-
-  </div>
-</div><br>
-
-
-<p>
-  <%#= @cash.balance %>
-</p>
