--- a/app/views/transactions/cash_transactions.html.erb
+++ b/app/views/transactions/cash_transactions.html.erb
@@ -1,7 +1,3 @@
-<p id="notice"><%= notice %></p>
-
-<h1>Listing Transactions</h1>
-
 <table>
   <thead>
     <tr>
@@ -10,7 +6,7 @@
       <th>Transaction date</th>
       <th>Category</th>
       <th>Transaction type</th>
-      <!--<th>Related Account</th>-->
+      <th>Related Account</th>
       <th colspan="3"></th>
     </tr>
   </thead>
@@ -34,4 +30,4 @@
 
 <br>
 
-<%= link_to 'New Transaction', new_transaction_path %>
+<%= link_to 'New Cash Transaction', new_cash_account_transaction_path(@cash_account) %>
