--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -12,3 +12,26 @@ a.button-list {
     text-decoration: none;
 }
 
+.datetime select:nth-child(1){
+  width: 130px;
+  text-indent: 15px;
+  padding: 12px 20px;
+  margin: 8px 0;
+  box-sizing: border-box;
+}
+
+.datetime select:nth-child(2) {
+  width: 200px;
+  text-indent: 5px;
+  padding: 12px 20px;
+  margin: 8px 0;
+  box-sizing: border-box;
+}
+
+.datetime select:nth-child(3) {
+  width: 110px;
+  text-indent: 15px;
+  padding: 12px 20px;
+  margin: 8px 0;
+  box-sizing: border-box;
+}
