--- a/app/views/transactions/cash_transactions.html.erb
+++ b/app/views/transactions/cash_transactions.html.erb
@@ -1,33 +1,31 @@
-<table>
-  <thead>
-    <tr>
-      <th>Explanation</th>
-      <th>Amount</th>
-      <th>Transaction date</th>
-      <th>Category</th>
-      <th>Transaction type</th>
-      <th>Related Account</th>
-      <th colspan="3"></th>
-    </tr>
-  </thead>
+<div class="page-content-col">
+  <div class="col-md-6 col-md-offset-3">
+    <a href="#" class="button-list" role="button">Transactions<br><br>
+      <table class="table">
+        <% @transactions.each do |transaction| %>
+            <tr>
+              <td><%= transaction.created_at.strftime("%m-%d-%Y") %></td>
+              <td><%= transaction.explanation %></td>
+              <td><%= link_to "#{transaction.amount}", transaction %></td>
+            </tr>
+          </a>
+        <% end %>
+      </table>
+    <%= link_to 'New Transaction', new_account_transaction_path(@account) %>
+  </div>
+</div>
 
-  <tbody>
-    <% @transactions.each do |transaction| %>
-      <tr>
-        <td><%= transaction.explanation %></td>
-        <td><%= transaction.amount %></td>
-        <td><%= transaction.created_at.strftime("%m-%d-%Y") %></td>
-        <td><%= transaction.category %></td>
-        <td><%= transaction.transaction_type %></td>
-        <td><%#= transaction.cash_account.name %></td>
-        <td><%= link_to 'Show', transaction %></td>
-        <td><%= link_to 'Edit', edit_transaction_path(transaction) %></td>
-        <td><%= link_to 'Destroy', transaction, method: :delete, data: { confirm: 'Are you sure?' } %></td>
-      </tr>
-    <% end %>
-  </tbody>
-</table>
-
-<br>
-
-<%= link_to 'New Cash Transaction', new_cash_account_transaction_path(@cash_account) %>
+  <!--<table>-->
+    <!--  <thead>-->
+    <!--    <tr>-->
+    <!--      <th>Transaction date</th>-->
+    <!--      <th>Explanation</th>-->
+    <!--      <th>Amount</th>-->
+    <!--      <th colspan="3"></th>-->
+    <!--    </tr>-->
+    <!--  </thead>-->
+    <!--</table>-->
+    
+    <!--<td><%#= link_to 'Show', transaction %></td>-->
+              <!--<td><%#= link_to 'Edit', edit_transaction_path(transaction) %></td>-->
+              <!--<td><%#= link_to 'Destroy', transaction, method: :delete, data: { confirm: 'Are you sure?' } %></td>-->
