--- a/app/views/transactions/new.html.erb
+++ b/app/views/transactions/new.html.erb
@@ -1,5 +1,7 @@
-<h1>New Transaction</h1>
-
-<%= render 'form' %>
-
-<%= link_to 'Back', transactions_path %>
+<div class="page-content">
+  <h1>New Transaction</h1>
+  
+  <%= render 'form' %>
+  
+  <%= link_to 'Back', transactions_path %>
+</div>
