--- a/app/assets/stylesheets/accounts.scss
+++ b/app/assets/stylesheets/accounts.scss
@@ -5,8 +5,18 @@ h1, h3 {
     text-align: center;
 }
 
+td, th {
+    border-bottom: 1px solid #ddd;
+}
+
+td {
+    height: 35px;   
+}
+
 table {
     width: 100%;
+    // border-collapse: collapse;
+    // border: 1px solid black;
 }
 
 th {
