--- a/app/assets/stylesheets/transactions.scss
+++ b/app/assets/stylesheets/transactions.scss
@@ -1,3 +1,91 @@
 // Place all the styles related to the Transactions controller here.
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
+h1, h3 {
+    text-align: center;
+}
+
+
+td, th {
+    border-bottom: 1px solid #ddd;
+}
+
+td {
+    height: 35px;   
+}
+
+table {
+    width: 100%;
+    // border-collapse: collapse;
+    // border: 1px solid black;
+}
+
+th {
+    height: 50px;
+}
+
+input[type=text] {
+    width: 100%;
+    padding: 12px 20px;
+    margin: 8px 0;
+    box-sizing: border-box;
+}
+
+input[type=text]:focus {
+    border: 3px solid #555;
+}
+
+input[type=button], input[type=submit], input[type=reset] {
+    background-color: #4CAF50;
+    border: none;
+    color: white;
+    padding: 16px 32px;
+    text-decoration: none;
+    margin: 4px 2px;
+    cursor: pointer;
+}
+
+.my-selector {
+    width: 100%;
+    padding: 12px 20px;
+    margin: 8px 0;
+    box-sizing: border-box;
+}
+
+a.button-list {
+    background-color: #e7e7e7;
+    color: black;
+    font-size: 20px;
+    border-radius: 6px;
+    border: 2px solid #008CBA;
+    width: 100%;
+    display: block;
+    text-decoration: none;
+    padding: 32px 16px;
+    text-align: justify;
+    -webkit-transition-duration: 0.4s; /* Safari */
+    transition-duration: 0.4s;
+}
+
+a.button-list:hover {
+    background-color: #008CBA; /* Blue */
+    color: white;
+}
+
+.datetime select:nth-child(1){
+  width: 130px;
+  text-indent: 15px;
+  padding: 12px 20px;
+  margin: 8px 0;
+  box-sizing: border-box;
+}
+
+.datetime select:nth-child(2) {
+  width: 200px;
+  text-indent: 5px;
+}
+
+.datetime select:nth-child(3) {
+  width: 110px;
+  text-indent: 15px;
+}
