--- a/app/views/accounts/index.html.erb
+++ b/app/views/accounts/index.html.erb
@@ -1,67 +1,73 @@
 <p id="notice"><%= notice %></p>
-
-<h1>Listing Accounts</h1>
-
-<table>
-  <thead>
-    <tr>
-      <th>Name</th>
-      <th>Account type</th>
-      <th>Balance</th>
-      <th>Due date</th>
-      <!--<th>Transaction</th>-->
-      <th colspan="3"></th>
-    </tr>
-  </thead>
-
-  <tbody>
-    <% @accounts.each do |account| %>
-      <tr>
-        <td><%= account.name %></td>
-        <td><%= account.account_type %></td>
-        <td><%= account.balance %></td>
-        <td><%= account.due_date %></td>
-        <!--<td><%#= account.transaction %></td>-->
-        <td><%= link_to 'Show', account %></td>
-        <td><%= link_to 'Edit', edit_account_path(account) %></td>
-        <td><%= link_to 'Destroy', account, method: :delete, data: { confirm: 'Are you sure?' } %></td>
-      </tr>
-    <% end %>
-  </tbody>
-</table>
-
-<br>
-
-<h1>Listing Related Accounts</h1>
-
-<table>
-  <thead>
-    <tr>
-      <th>Name</th>
-      <th>Account type</th>
-      <th>Balance</th>
-      <th>Due date</th>
-      <!--<th>Transaction</th>-->
-      <th colspan="3"></th>
-    </tr>
-  </thead>
-
-  <tbody>
-    <% @related_accounts.each do |account| %>
-      <tr>
-        <td><%= account.name %></td>
-        <td><%= account.account_type %></td>
-        <td><%= account.balance %></td>
-        <td><%= account.due_date %></td>
-        <!--<td><%#= account.transaction %></td>-->
-        <td><%= link_to 'Show', account %></td>
-        <td><%= link_to 'Edit', edit_related_account_path(account) %></td>
-        <td><%= link_to 'Destroy', account, method: :delete, data: { confirm: 'Are you sure?' } %></td>
-      </tr>
-    <% end %>
-  </tbody>
-</table>
-
-<br>
-
-<%= link_to 'New Account', new_account_path %>
+<div class="page-content">
+  
+  <h1>Accounts</h1><br>
+  <div class="page-content-col">
+    <div class="row">
+      <div class="col-md-6 col-md-offset-3">
+    
+        <table>
+          <thead>
+            <tr>
+              <th>Name</th>
+              <th>Account type</th>
+              <th>Balance</th>
+              <th>Due date</th>
+              <!--<th>Transaction</th>-->
+              <th colspan="3"></th>
+            </tr>
+          </thead>
+        
+          <tbody>
+            <% @accounts.each do |account| %>
+              <tr>
+                <td><%= account.name %></td>
+                <td><%= account.account_type %></td>
+                <td><%= account.balance %></td>
+                <td><%= account.due_date %></td>
+                <!--<td><%#= account.transaction %></td>-->
+                <td><%= link_to 'Show', account %></td>
+                <td><%= link_to 'Edit', edit_account_path(account) %></td>
+                <td><%= link_to 'Destroy', account, method: :delete, data: { confirm: 'Are you sure?' } %></td>
+              </tr>
+            <% end %>
+          </tbody>
+        </table>
+        
+        <br>
+        
+        <h1>Related Accounts</h1>
+        
+        <table>
+          <thead>
+            <tr>
+              <th>Name</th>
+              <th>Account type</th>
+              <th>Balance</th>
+              <th>Due date</th>
+              <!--<th>Transaction</th>-->
+              <th colspan="3"></th>
+            </tr>
+          </thead>
+        
+          <tbody>
+            <% @related_accounts.each do |account| %>
+              <tr>
+                <td><%= account.name %></td>
+                <td><%= account.account_type %></td>
+                <td><%= account.balance %></td>
+                <td><%= account.due_date %></td>
+                <!--<td><%#= account.transaction %></td>-->
+                <td><%= link_to 'Show', account %></td>
+                <td><%= link_to 'Edit', edit_related_account_path(account) %></td>
+                <td><%= link_to 'Destroy', account, method: :delete, data: { confirm: 'Are you sure?' } %></td>
+              </tr>
+            <% end %>
+          </tbody>
+        </table>
+        <br>
+        <%= link_to 'New Account', new_account_path %>
+      </div>
+    </div>
+  </div>
+</div>
