--- a/app/views/transactions/index.html.erb
+++ b/app/views/transactions/index.html.erb
@@ -1,37 +1,69 @@
 <p id="notice"><%= notice %></p>
-
-<h1>Listing Transactions</h1>
-
-<table>
-  <thead>
-    <tr>
-      <th>Explanation</th>
-      <th>Amount</th>
-      <th>Transaction date</th>
-      <th>Category</th>
-      <th>Transaction type</th>
-      <!--<th>Related Account</th>-->
-      <th colspan="3"></th>
-    </tr>
-  </thead>
-
-  <tbody>
-    <% @transactions.each do |transaction| %>
-      <tr>
-        <td><%= transaction.explanation %></td>
-        <td><%= transaction.amount %></td>
-        <td><%= transaction.created_at.strftime("%m-%d-%Y") %></td>
-        <td><%= transaction.category %></td>
-        <td><%= transaction.transaction_type %></td>
-        <td><%#= transaction.cash_account.name %></td>
-        <td><%= link_to 'Show', transaction %></td>
-        <td><%= link_to 'Edit', edit_transaction_path(transaction) %></td>
-        <td><%= link_to 'Destroy', transaction, method: :delete, data: { confirm: 'Are you sure?' } %></td>
-      </tr>
-    <% end %>
-  </tbody>
-</table>
-
-<br>
-
-<%= link_to 'New Transaction', new_transaction_path %>
+<div class="page-content">
+  <h1>All Transactions</h1>
+  <div class="page-content-col">
+    <div class="row">
+      <div class="col-md-8 col-md-offset-2">
+        <table>
+          <thead>
+            <tr>
+              <th>Transaction date</th>
+              <th>Account</th>
+              <th>Explanation</th>
+              <th>Amount</th>
+              <th>Related Account</th>
+              <th>Category</th>
+              <th>Actions</th>
+              <!--<th colspan="3"></th>-->
+            </tr>
+          </thead>
+        
+          <tbody>
+            <% @transactions.each do |transaction| %>
+              <tr>
+                <td><%= transaction.created_at.strftime("%m-%d-%Y") %></td>
+                <td><%= transaction.account.name %></td>
+                <td><%= transaction.explanation %></td>
+                <td><%= transaction.amount %></td>
+                <% if transaction.related_account.present? %>
+                  <td><%= transaction.related_account.name %></td>
+                <% else %>
+                  <td>None</td>
+                <% end %>
+                <td><%= transaction.category %></td>
+                <td>
+                  <div class="btn-group pull-right">
+                      <button class="btn blue btn-xs btn-outline dropdown-toggle" data-toggle="dropdown">Actions</button>
+                      <ul class="dropdown-menu pull-right">
+                        <li>
+                          <%= link_to transaction_path(transaction) do %>
+                              View
+                          <% end %>
+                        </li>
+                        <li>
+                          <%= link_to edit_transaction_path(transaction) do %>
+                              Edit
+                          <% end %>
+                        </li>
+                        <li>
+                          <%= link_to transaction, method: :delete, data: { confirm: 'Are you sure?' } do %>
+                              Delete
+                          <% end %>
+                        </li>
+                      </ul>
+                  </div>
+                  
+                </td>
+                
+                <!--<td><%#= link_to 'Show', transaction %></td>-->
+                <!--<td><%#= link_to 'Edit', edit_transaction_path(transaction) %></td>-->
+                <!--<td><%#= link_to 'Destroy', transaction, method: :delete, data: { confirm: 'Are you sure?' } %></td>-->
+              </tr>
+            <% end %>
+          </tbody>
+        </table><br>
+        <%= link_to 'New Transaction', new_transaction_path %>
+      </div>
+    </div>
+  </div>
+</div>
