--- a/app/views/transactions/show.html.erb
+++ b/app/views/transactions/show.html.erb
@@ -1,29 +1,44 @@
 <p id="notice"><%= notice %></p>
+<div class="page-content">
+  <div class="page-content-col">
+    <div class="col-md-4 col-md-offset-4">
+      <a href="#<%#= account_path(@bill) %>" class="button-list" role="button"><%= @transaction.explanation %><br><br>
+        <p>
+          <strong>Transaction type:</strong>
+          <%= @transaction.transaction_type %>
+        </p>
+        
+        <p>
+          <strong>Account:</strong>
+          <%= @transaction.account.name %>
+        </p>
+        
+        <p>
+          <strong>Amount:</strong>
+          <%= @transaction.amount %>
+        </p>
+        
+        <% if @transaction.related_account.present? %>
+          <p>
+            <strong>Related Account:</strong>
+            <%= @transaction.related_account.name %>
+          </p>
+        <% end %>
+        
+        <p>
+          <strong>Transaction date:</strong>
+          <%= @transaction.created_at.strftime("%m-%d-%Y") %>
+        </p>
+        
+        <p>
+          <strong>Category:</strong>
+          <%= @transaction.category %>
+        </p>
+        
+        <%= link_to 'Edit', edit_transaction_path(@transaction) %> |
+        <%= link_to 'Back', transactions_path %>
+      </a>
+    </div>
+  </div>
+</div>
 
-<p>
-  <strong>Explanation:</strong>
-  <%= @transaction.explanation %>
-</p>
-
-<p>
-  <strong>Amount:</strong>
-  <%= @transaction.amount %>
-</p>
-
-<p>
-  <strong>Transaction date:</strong>
-  <%= @transaction.transaction_date %>
-</p>
-
-<p>
-  <strong>Category:</strong>
-  <%= @transaction.category %>
-</p>
-
-<p>
-  <strong>Transaction type:</strong>
-  <%= @transaction.transaction_type %>
-</p>
-
-<%= link_to 'Edit', edit_transaction_path(@transaction) %> |
-<%= link_to 'Back', transactions_path %>
