--- a/app/views/accounts/_form.html.erb
+++ b/app/views/accounts/_form.html.erb
@@ -27,7 +27,7 @@
       </div>
       <div class="field">
         <%= f.label :due_date %><br>
-        <span class="datetime"><%= f.date_select :due_date, :order => [:day, :month, :year], :start_year => 2017, :end_year => 2022 %></span>
+        <span class="datetime"><%= f.date_select :due_date, :prompt => { :day => 'Select day', :month => 'Select month', :year => 'Select year' }, :order => [:day, :month, :year], :start_year => 2017, :end_year => 2022 %></span>
       </div>
       <div class="actions">
         <%= f.submit %>
