--- a/app/views/accounts/show.html.erb
+++ b/app/views/accounts/show.html.erb
@@ -6,7 +6,11 @@
     <h3><%= "#{@account.name}   Balance: $#{@account.balance}  Due Date: #{@account.due_date.strftime("%m-%d-%Y")}" %></h3>
   <% end %>
 <br>
-<%= link_to 'Edit', edit_account_path(@account) %> |
-<%= link_to 'Back', accounts_path %>
-<%= render template: "transactions/cash_transactions" %>
+  <div class="page-content-col">
+    <div class="col-md-6 col-md-offset-3">
+      <%= link_to 'Edit Account', edit_account_path(@account) %> |
+      <%= link_to 'Back to Accounts', accounts_path %>
+      <%= render template: "transactions/account_transactions" %>
+    </div>
+  </div>
 </div>
