--- a/app/views/transactions/index.html.erb
+++ b/app/views/transactions/index.html.erb
@@ -13,8 +13,7 @@
               <th>Amount</th>
               <th>Related Account</th>
               <th>Category</th>
-              <th>Actions</th>
-              <!--<th colspan="3"></th>-->
+              <th colspan="1"></th>
             </tr>
           </thead>
         
@@ -33,36 +32,31 @@
                 <td><%= transaction.category %></td>
                 <td>
                   <div class="btn-group pull-right">
-                      <button class="btn blue btn-xs btn-outline dropdown-toggle" data-toggle="dropdown">Actions</button>
-                      <ul class="dropdown-menu pull-right">
-                        <li>
-                          <%= link_to transaction_path(transaction) do %>
-                              View
-                          <% end %>
-                        </li>
-                        <li>
-                          <%= link_to edit_transaction_path(transaction) do %>
-                              Edit
-                          <% end %>
-                        </li>
-                        <li>
-                          <%= link_to transaction, method: :delete, data: { confirm: 'Are you sure?' } do %>
-                              Delete
-                          <% end %>
-                        </li>
-                      </ul>
+                    <button class="btn blue btn-xs btn-outline dropdown-toggle" data-toggle="dropdown">Actions</button>
+                    <ul class="dropdown-menu pull-right">
+                      <li>
+                        <%= link_to transaction_path(transaction) do %>
+                            View
+                        <% end %>
+                      </li>
+                      <li>
+                        <%= link_to edit_transaction_path(transaction) do %>
+                            Edit
+                        <% end %>
+                      </li>
+                      <li>
+                        <%= link_to transaction, method: :delete, data: { confirm: 'Are you sure?' } do %>
+                            Delete
+                        <% end %>
+                      </li>
+                    </ul>
                   </div>
-                  
                 </td>
-                
-                <!--<td><%#= link_to 'Show', transaction %></td>-->
-                <!--<td><%#= link_to 'Edit', edit_transaction_path(transaction) %></td>-->
-                <!--<td><%#= link_to 'Destroy', transaction, method: :delete, data: { confirm: 'Are you sure?' } %></td>-->
               </tr>
             <% end %>
           </tbody>
         </table><br>
-        <%= link_to 'New Transaction', new_transaction_path %>
+        <%= link_to 'Back to Accounts', accounts_path %>
       </div>
     </div>
   </div>
