--- a/app/views/accounts/index.html.erb
+++ b/app/views/accounts/index.html.erb
@@ -22,7 +22,7 @@
               <tr>
                 <td><%= account.name %></td>
                 <td><%= account.account_type %></td>
-                <td><%= account.balance %></td>
+                <td><%= number_to_currency(account.balance.abs) %></td>
                 <% if account.account_type == "Credit Card" || account.account_type == "Bill" %>
                   <td><%= account.due_date.strftime("%m-%d-%Y") %></td>
                 <% else %>
@@ -75,7 +75,7 @@
               <tr>
                 <td><%= account.name %></td>
                 <td><%= account.account_type %></td>
-                <td><%= account.balance %></td>
+                <td><%= number_to_currency(account.balance.abs) %></td>
                 <% if account.account_type == "Credit Card" || account.account_type == "Bill" %>
                   <td><%= account.due_date.strftime("%m-%d-%Y") %></td>
                 <% else %>
