--- a/app/views/accounts/show.html.erb
+++ b/app/views/accounts/show.html.erb
@@ -1,9 +1,10 @@
 <p id="notice"><%= notice %></p>
 <div class="page-content">
   <% if @account.account_type == "Cash" || @account.account_type == "Bank" %>
-    <h3><%= "#{@account.name}   Balance: $#{@account.balance}" %></h3>
+    <h3><%= "#{@account.name}   Balance: #{number_to_currency(@account.balance)}" %></h3>
   <% elsif @account.account_type == "Credit Card" || @account.account_type == "Bill"  %>
-    <h3><%= "#{@account.name}   Balance: $#{@account.balance}  Due Date: #{@account.due_date.strftime("%m-%d-%Y")}" %></h3>
+    <h3><%= "#{@account.name}   Balance: #{number_to_currency(@account.balance)}" %><br>
+        <%= "Due Date: #{@account.due_date.strftime("%m-%d-%Y")}" %></h3>
   <% end %>
 <br>
   <div class="page-content-col">
