--- a/app/views/transactions/index.html.erb
+++ b/app/views/transactions/index.html.erb
@@ -23,7 +23,7 @@
                 <td><%= transaction.created_at.strftime("%m-%d-%Y") %></td>
                 <td><%= transaction.account.name %></td>
                 <td><%= transaction.explanation %></td>
-                <td><%= transaction.amount %></td>
+                <td><%= number_to_currency(transaction.amount) %></td>
                 <% if transaction.related_account.present? %>
                   <td><%= transaction.related_account.name %></td>
                 <% else %>
