--- a/app/views/transactions/show.html.erb
+++ b/app/views/transactions/show.html.erb
@@ -36,7 +36,7 @@
         </p>
         
         <%= link_to 'Edit', edit_transaction_path(@transaction) %> |
-        <%= link_to 'Back', transactions_path %>
+        <%= link_to 'Back to Accounts', accounts_path %>
       </a>
     </div>
   </div>
