--- a/app/views/accounts/cash_accounts.html.erb
+++ b/app/views/accounts/cash_accounts.html.erb
@@ -1,4 +1,5 @@
 <div class="page-content">
+  <h3>Cash Accounts</h3>
   <div class="page-content-col">
     <div class="row">
       <div class="col-md-6 col-md-offset-3"><br>
@@ -8,6 +9,8 @@
             <%= "#{number_to_currency(account.balance)}" %>
           </a>
         <% end %>
+        <%= link_to 'Back to Accounts', root_path %> |
+        <%= link_to 'New Account', new_account_path %>
       </div>
     </div>
   </div>
