--- a/app/views/accounts/credit_cards.html.erb
+++ b/app/views/accounts/credit_cards.html.erb
@@ -1,13 +1,16 @@
 <div class="page-content">
+  <h3>Credit Cards</h3>
   <div class="page-content-col">
     <div class="row">
       <div class="col-md-6 col-md-offset-3"><br>
         <% @credit_cards.each do |account| %>
           <a href="<%= account_path(account) %>" class="button-list" role="button">
             <%= "#{account.name}" %><br>
-            <%= "#{number_to_currency(account.balance)}" %>
+            <%= "#{number_to_currency(account.balance.abs)}" %>
           </a>
         <% end %>
+        <%= link_to 'Back to Accounts', root_path %> |
+        <%= link_to 'New Account', new_account_path %>
       </div>
     </div>
   </div>
