--- a/app/views/transactions/_form.html.erb
+++ b/app/views/transactions/_form.html.erb
@@ -29,7 +29,10 @@
         <%= f.label :transaction_type %><br>
         <%= f.select("transaction_type", ["Credit", "Debit"], {include_blank: '-- Select One --'}, required: true, class: "my-selector") %>
       </div>
-      
+      <div class="field">
+        <%= f.label :transaction_date %><br>
+        <span class="datetime"><%= f.date_select :transaction_date, :order => [:day, :month, :year], :start_year => 2017, :end_year => 2022 %></span>
+      </div>
       <div class="field">
         <%= f.hidden_field :account_id, value: @account.id %>
       </div>
