--- a/app/views/accounts/index.html.erb
+++ b/app/views/accounts/index.html.erb
@@ -1,114 +1,76 @@
 <p id="notice"><%= notice %></p>
 <div class="page-content">
-  
-  <h1>Accounts</h1><br>
   <div class="page-content-col">
     <div class="row">
-      <div class="col-md-6 col-md-offset-3">
-    
+      <div class="col-md-5 col-md-offset-1">
+        <h1>Accounts</h1><br>
         <table>
           <thead>
             <tr>
+              <th colspan="1"></th>
               <th>Name</th>
               <th>Account type</th>
               <th>Balance</th>
-              <th>Due date</th>
-              <th colspan="1"></th>
             </tr>
           </thead>
         
           <tbody>
             <% @accounts.each do |account| %>
               <tr>
+                <td>
+                  <div class="btn-group pull-left">
+                    <button class="btn blue btn-xs btn-outline dropdown-toggle" data-toggle="dropdown">Actions</button>
+                    <ul class="dropdown-menu pull-left">
+                      <li>
+                        <%= link_to account_path(account) do %>
+                            View
+                        <% end %>
+                      </li>
+                      <li>
+                        <%= link_to edit_account_path(account) do %>
+                            Edit
+                        <% end %>
+                      </li>
+                      <li>
+                        <%= link_to account, method: :delete, data: { confirm: 'Are you sure?' } do %>
+                            Delete
+                        <% end %>
+                      </li>
+                    </ul>
+                  </div>
+                </td>
                 <td><%= account.name %></td>
                 <td><%= account.account_type %></td>
                 <td><%= number_to_currency(account.balance.abs) %></td>
-                <% if account.account_type == "Credit Card" || account.account_type == "Bill" %>
-                  <td><%= account.due_date.strftime("%m-%d-%Y") %></td>
-                <% else %>
-                  <td>None</td>
-                <% end %>
-                <td>
-                  <div class="btn-group pull-right">
-                      <button class="btn blue btn-xs btn-outline dropdown-toggle" data-toggle="dropdown">Actions</button>
-                      <ul class="dropdown-menu pull-right">
-                        <li>
-                          <%= link_to account_path(account) do %>
-                              View
-                          <% end %>
-                        </li>
-                        <li>
-                          <%= link_to edit_account_path(account) do %>
-                              Edit
-                          <% end %>
-                        </li>
-                        <li>
-                          <%= link_to account, method: :delete, data: { confirm: 'Are you sure?' } do %>
-                              Delete
-                          <% end %>
-                        </li>
-                      </ul>
-                  </div>
-                </td>
               </tr>
             <% end %>
           </tbody>
-        </table>
-        
-        <br>
-        
-        <h1>Related Accounts</h1>
-        
+        </table><br>
+        <%= link_to 'New Account', new_account_path %> | 
+        <%= link_to 'Home', root_path %>
+      </div>
+      <div class="col-md-5">
+        <h1>Related Accounts</h1><br>
         <table>
           <thead>
             <tr>
+              <th>Balance</th>
               <th>Name</th>
               <th>Account type</th>
-              <th>Balance</th>
-              <th>Due date</th>
-              <th colspan="1"></th>
             </tr>
           </thead>
         
           <tbody>
             <% @related_accounts.each do |account| %>
               <tr>
+                <td><%= number_to_currency(account.balance.abs) %></td>
                 <td><%= account.name %></td>
                 <td><%= account.account_type %></td>
-                <td><%= number_to_currency(account.balance.abs) %></td>
-                <% if account.account_type == "Credit Card" || account.account_type == "Bill" %>
-                  <td><%= account.due_date.strftime("%m-%d-%Y") %></td>
-                <% else %>
-                  <td>None</td>
-                <% end %>
-                <td>
-                  <div class="btn-group pull-right">
-                      <button class="btn blue btn-xs btn-outline dropdown-toggle" data-toggle="dropdown">Actions</button>
-                      <ul class="dropdown-menu pull-right">
-                        <li>
-                          <%= link_to related_account_path(account) do %>
-                              View
-                          <% end %>
-                        </li>
-                        <li>
-                          <%= link_to edit_related_account_path(account) do %>
-                              Edit
-                          <% end %>
-                        </li>
-                        <li>
-                          <%= link_to account, method: :delete, data: { confirm: 'Are you sure?' } do %>
-                              Delete
-                          <% end %>
-                        </li>
-                      </ul>
-                  </div>
-                </td>
               </tr>
             <% end %>
           </tbody>
         </table>
         <br>
-        <%= link_to 'New Account', new_account_path %>
       </div>
     </div>
   </div>
