--- a/app/views/transactions/show.html.erb
+++ b/app/views/transactions/show.html.erb
@@ -35,8 +35,8 @@
           <%= @transaction.category %>
         </p>
         
-        <%= link_to 'Edit', edit_transaction_path(@transaction) %> |
-        <%= link_to 'Back to Accounts', accounts_path %>
+        <%= link_to 'Edit', edit_transaction_path(@transaction) %> | 
+        <%= link_to 'Back to Account', account_path(@transaction.account_id) %>
       </a>
     </div>
   </div>
