--- a/app/views/notes/_form.html.erb
+++ b/app/views/notes/_form.html.erb
@@ -1,12 +1,12 @@
 <div class="page-content-col">
   <div class="col-md-6 col-md-offset-3">
-    <%= form_for(@transaction) do |f| %>
-      <% if @transaction.errors.any? %>
+    <%= form_for(@note) do |f| %>
+      <% if @note.errors.any? %>
         <div id="error_explanation">
-          <h2><%= pluralize(@transaction.errors.count, "error") %> prohibited this transaction from being saved:</h2>
+          <h2><%= pluralize(@note.errors.count, "error") %> prohibited this transaction from being saved:</h2>
     
           <ul>
-          <% @transaction.errors.full_messages.each do |message| %>
+          <% @note.errors.full_messages.each do |message| %>
             <li><%= message %></li>
           <% end %>
           </ul>
