--- a/app/views/notes/index.html.erb
+++ b/app/views/notes/index.html.erb
@@ -18,7 +18,7 @@
           </thead>
         
           <tbody>
-            <% @transactions.each do |transaction| %>
+            <% @notes.each do |transaction| %>
               <tr>
                 <td><%= transaction.created_at.strftime("%m-%d-%Y") %></td>
                 <td><%= transaction.account.name %></td>
@@ -35,12 +35,12 @@
                     <button class="btn blue btn-xs btn-outline dropdown-toggle" data-toggle="dropdown">Actions</button>
                     <ul class="dropdown-menu pull-right">
                       <li>
-                        <%= link_to transaction_path(transaction) do %>
+                        <%= link_to note_path(transaction) do %>
                             View
                         <% end %>
                       </li>
                       <li>
-                        <%= link_to edit_transaction_path(transaction) do %>
+                        <%= link_to edit_note_path(transaction) do %>
                             Edit
                         <% end %>
                       </li>
