style users and fix tests

--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -104,3 +104,10 @@ li a.nav:hover {
     background-color: #555;
     color: white;
 }
+
+.form {
+    width: 100%;
+    padding: 12px 20px;
+    margin: 8px 0;
+    box-sizing: border-box;
+}
