--- a/app/assets/stylesheets/users.scss
+++ b/app/assets/stylesheets/users.scss
@@ -1,3 +1,28 @@
-// Place all the styles related to the Users controller here.
-// They will automatically be included in application.css.
-// You can use Sass (SCSS) here: http://sass-lang.com/
+h1, h3 {
+    text-align: center;
+}
+
+td, th {
+    border-bottom: 1px solid #ddd;
+}
+
+td {
+    height: 35px;   
+}
+
+table {
+    width: 100%;
+    // border-collapse: collapse;
+    // border: 1px solid black;
+}
+
+th {
+    height: 50px;
+}
+
+form {
+    width: 100%;
+    padding: 12px 20px;
+    margin: 8px 0;
+    box-sizing: border-box;
+}
