--- a/app/views/accounts/bank_accounts.html.erb
+++ b/app/views/accounts/bank_accounts.html.erb
@@ -1,7 +1,10 @@
 <div class="page-content">
-  <h3>Bank Accounts</h3>
+  
   <div class="page-content-col">
     <div class="row">
+      
+      <%= render partial: "pages/navigation" %>
+      <h3>Bank Accounts</h3>
       <div class="col-md-6 col-md-offset-3"><br>
         <% @bank_accounts.each do |account| %>
           <a href="<%= account_path(account) %>" class="button-list" role="button">
