--- a/app/views/accounts/bills.html.erb
+++ b/app/views/accounts/bills.html.erb
@@ -1,7 +1,9 @@
 <div class="page-content">
-  <h3>This Months Bills</h3>
+  
   <div class="page-content-col">
     <div class="row">
+      <%= render partial: "pages/navigation" %>
+      <h3>This Months Bills</h3>
       <div class="col-md-6 col-md-offset-3"><br>
         <% @bills.each do |account| %>
           <a href="<%= account_path(account) %>" class="button-list" role="button">
