--- a/app/views/accounts/credit_cards.html.erb
+++ b/app/views/accounts/credit_cards.html.erb
@@ -1,7 +1,8 @@
 <div class="page-content">
-  <h3>Credit Cards</h3>
   <div class="page-content-col">
     <div class="row">
+      <%= render partial: "pages/navigation" %>
+      <h3>Credit Cards</h3>
       <div class="col-md-6 col-md-offset-3"><br>
         <% @credit_cards.each do |account| %>
           <a href="<%= account_path(account) %>" class="button-list" role="button">
