--- a/app/views/accounts/bills.html.erb
+++ b/app/views/accounts/bills.html.erb
@@ -1,19 +1,31 @@
 <div class="page-content">
-  
   <div class="page-content-col">
     <div class="row">
       <%= render partial: "pages/navigation" %>
-      <h3>This Months Bills</h3>
-      <div class="col-md-6 col-md-offset-3"><br>
+      <h2>This Months Bills</h2>
+      <div class="col-md-6 col-md-offset-3">
+        <%= link_to 'Back to Accounts', root_path %> |
+        <%= link_to 'New Account', new_account_path %>
         <% @bills.each do |account| %>
+          <% if account.due_date <= Date.today.end_of_month %>
+            <a href="<%= account_path(account) %>" class="button-list" role="button">
+              <%= "#{account.name}" %><br>
+              <%= "#{number_to_currency(account.balance.abs)}" %>
+            </a>
+          <% end %>
+        <% end %>
+      </div>
+    </div><br><br>
+    <h3>Next Months Bills</h3>
+    <div class="col-md-6 col-md-offset-3">
+      <% @bills.each do |account| %>
+        <% if account.due_date <= Date.today.next_month && account.due_date > Date.today.end_of_month %>
           <a href="<%= account_path(account) %>" class="button-list" role="button">
             <%= "#{account.name}" %><br>
             <%= "#{number_to_currency(account.balance.abs)}" %>
           </a>
         <% end %>
-        <%= link_to 'Back to Accounts', root_path %> |
-        <%= link_to 'New Account', new_account_path %>
-      </div>
+      <% end %>
     </div>
   </div>
 </div>
