--- a/app/views/accounts/new.html.erb
+++ b/app/views/accounts/new.html.erb
@@ -1,7 +1,12 @@
 <div class="page-content">
-  <h1>New Account</h1>
-  
-  <%= render 'form' %>
-  
-  <%= link_to 'Back', accounts_path %>
+  <div class="page-content-col">
+    <div class="row">
+      <%= render partial: "pages/navigation" %>
+      <h1>New Account</h1>
+      <div class="col-md-6 col-md-offset-3">
+        <%= render 'form' %>
+        <%= link_to 'Back', accounts_path %>
+      </div>
+    </div>
+  </div>
 </div>
