--- a/app/views/accounts/show.html.erb
+++ b/app/views/accounts/show.html.erb
@@ -1,29 +1,31 @@
-<p id="notice"><%= notice %></p>
 <div class="page-content">
-  <% if @account.account_type == "Cash" || @account.account_type == "Bank" %>
-    <h3><%= "#{@account.name}   Balance: #{number_to_currency(@account.balance)}" %></h3>
-  <% elsif @account.account_type == "Credit Card" || @account.account_type == "Bill"  %>
-    <h3><%= "#{@account.name}   Minimum Payment: #{number_to_currency(@account.balance)}" %><br>
-        <%= "Due Date: #{@account.due_date.strftime("%m-%d-%Y")}" %><br>
-      <% if @account.account_type == "Credit Card" %>
-        <%= "(Principal Balance: #{number_to_currency(@account.principal_balance)}--APR: #{number_to_percentage(@account.apr, precision: 2)})" %>
-      <% end %>
-    </h3>
-  <% end %>
-<br>
   <div class="page-content-col">
-    <div class="col-md-6 col-md-offset-3">
-      <%= link_to 'Edit Account', edit_account_path(@account) %> |
-      <% if @account.account_type == "Cash" %>
-        <%= link_to 'Back to Cash Accounts', cash_accounts_path %>
-      <% elsif @account.account_type == "Bank" %>
-        <%= link_to 'Back to Bank Accounts', bank_accounts_path %>
-      <% elsif @account.account_type == "Credit Card" %>
-        <%= link_to 'Back to Credit Cards', credit_cards_path %>
-      <% else %>
-        <%= link_to 'Back to Bills', bills_path %>
-      <% end %>
-      <%= render template: "notes/account_transactions" %>
+    <div class="row">
+      <%= render partial: "pages/navigation" %>
+      <p id="notice"><%= notice %></p>
+      <% if @account.account_type == "Cash" || @account.account_type == "Bank" %>
+        <h3><%= "#{@account.name}   Balance: #{number_to_currency(@account.balance)}" %></h3>
+      <% elsif @account.account_type == "Credit Card" || @account.account_type == "Bill"  %>
+        <h3><%= "#{@account.name}   Minimum Payment: #{number_to_currency(@account.balance)}" %><br>
+            <%= "Due Date: #{@account.due_date.strftime("%m-%d-%Y")}" %><br>
+          <% if @account.account_type == "Credit Card" %>
+            <%= "(Principal Balance: #{number_to_currency(@account.principal_balance)}--APR: #{number_to_percentage(@account.apr, precision: 2)})" %>
+          <% end %>
+        </h3>
+      <% end %><br>
+      <div class="col-md-6 col-md-offset-3">
+        <%= link_to 'Edit Account', edit_account_path(@account) %> |
+        <% if @account.account_type == "Cash" %>
+          <%= link_to 'Back to Cash Accounts', cash_accounts_path %>
+        <% elsif @account.account_type == "Bank" %>
+          <%= link_to 'Back to Bank Accounts', bank_accounts_path %>
+        <% elsif @account.account_type == "Credit Card" %>
+          <%= link_to 'Back to Credit Cards', credit_cards_path %>
+        <% else %>
+          <%= link_to 'Back to Bills', bills_path %>
+        <% end %>
+        <%= render template: "notes/account_transactions" %>
+      </div>
     </div>
   </div>
 </div>
