--- a/app/views/categories/new.html.erb
+++ b/app/views/categories/new.html.erb
@@ -1,5 +1,12 @@
-<h1>New Category</h1>
-
-<%= render 'form' %>
-
-<%= link_to 'Back', categories_path %>
+<div class="page-content">
+  <div class="page-content-col">
+    <div class="row">
+      <%= render partial: "pages/navigation" %>
+      <h1>New Category</h1>
+      <div class="col-md-6 col-md-offset-3">
+        <%= render 'form' %>
+        <%= link_to 'Back', categories_path %>
+      </div>
+    </div>
+  </div>
+</div>
