--- a/app/views/notes/edit.html.erb
+++ b/app/views/notes/edit.html.erb
@@ -1,6 +1,14 @@
-<h1>Editing Transaction</h1>
-
-<%= render 'form' %>
-
-<%= link_to 'Show', @note %> |
-<%= link_to 'Back', notes_path %>
+<div class="page-content">
+  <div class="page-content-col">
+    <div class="row">
+      <%= render partial: "pages/navigation" %>
+      <h1>Editing Transaction</h1>
+      <div class="col-md-6 col-md-offset-3">
+        <%= render 'form' %>
+        
+        <%= link_to 'Show', @note %> |
+        <%= link_to 'Back', notes_path %>
+      </div>
+    </div>
+  </div>
+</div>
