--- a/app/views/pages/_navigation.html.erb
+++ b/app/views/pages/_navigation.html.erb
@@ -3,6 +3,7 @@
   <li><a href="/" class="nav">Accounts</a></li>
   <li><a href="#" class="nav">Budget</a></li>
   <li><a href="#" class="nav">Spending</a></li>
-  <li><a href="/categories" class="nav">Categories</a></li><br>
+  <li><a href="/categories" class="nav">Categories</a></li>
+  <li><a href="<% logout_path %>" class="nav">Logout</a></li><br>
   <!--<li><a href="#"><%#= image_tag 'sky.jpg', class: "img-circle", size: "90x70" %></a></li>-->
 </ul>
