--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -3,12 +3,16 @@
     <div class="row">
       <%= render partial: "navigation" %><br><br>
       <div class="col-md-6 col-md-offset-3">
+        <% if logged_in? %>
         <a href="<%= cash_accounts_path %>" class="button-list" role="button">Cash on Hand<br>Balance: $<%= @cash_accounts.sum(:balance) %></a>
         <a href="<%= bank_accounts_path %>" class="button-list" role="button">Bank Account<br>Balance: $<%= @bank_accounts.sum(:balance) %></a>
         <a href="<%= bills_path %>" class="button-list" role="button">Bills due this month<br>Total: $<%= @bills.sum(:balance).abs %></a>
         <a href="<%= credit_cards_path %>" class="button-list" role="button">Credit Card Debt<br>Total: $<%= @credit_cards.sum(:balance).abs %></a>
         <a href="<%= new_account_path %>" class="btn btn-info btn-md btn-block" role="button">New Account</a>
         <a href="<%= accounts_path %>" class="btn btn-success btn-md btn-block" role="button">All Accounts</a>
+        <% else %>
+          <%= render template: "/sessions/new" %>
+        <% end %>
       </div>
     </div>
   </div>
