--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -1,7 +1,14 @@
+<% provide(:title, 'Sign up') %>
 <div class="page-content">
-  <h1>New User</h1>
-  
-  <%= render 'form' %>
-  
-  <%= link_to 'Back', users_path %>
+  <div class="page-content-col">
+    <div class="row">
+      <%= render partial: "pages/navigation" %>
+      <h1>Sign up New User</h1>
+      <div class="col-md-6 col-md-offset-3">
+        <%= render 'form' %>
+        
+        <%= link_to 'Back', users_path %>
+      </div>
+    </div>
+  </div>
 </div>
