ready for heroku

--- a/app/views/pages/_navigation.html.erb
+++ b/app/views/pages/_navigation.html.erb
@@ -4,6 +4,6 @@
   <li><a href="#" class="nav">Budget</a></li>
   <li><a href="#" class="nav">Spending</a></li>
   <li><a href="/categories" class="nav">Categories</a></li>
-  <li><a href="<% logout_path %>" class="nav">Logout</a></li><br>
+  <li><a href="/logout" data-method="delete" class="nav">Logout</a></li><br>
   <!--<li><a href="#"><%#= image_tag 'sky.jpg', class: "img-circle", size: "90x70" %></a></li>-->
 </ul>
