update category associations and views

--- a/app/views/categories/index.html.erb
+++ b/app/views/categories/index.html.erb
@@ -8,16 +8,37 @@
         <table>
           <thead>
             <tr>
-              <th colspan="3"></th>
+              <th>Category Name</th>
+              <th colspan="1"></th>
             </tr>
           </thead>
         
           <tbody>
             <% @categories.each do |category| %>
               <tr>
-                <td><%= link_to 'Show', category %></td>
-                <td><%= link_to 'Edit', edit_category_path(category) %></td>
-                <td><%= link_to 'Destroy', category, method: :delete, data: { confirm: 'Are you sure?' } %></td>
+                <td><%= category.name %></td>
+                <td>
+                  <div class="btn-group pull-right">
+                    <button class="btn blue btn-xs btn-outline dropdown-toggle" data-toggle="dropdown">Actions</button>
+                    <ul class="dropdown-menu pull-right">
+                      <li>
+                        <%= link_to category_path(category) do %>
+                            View
+                        <% end %>
+                      </li>
+                      <li>
+                        <%= link_to edit_category_path(category) do %>
+                            Edit
+                        <% end %>
+                      </li>
+                      <li>
+                        <%= link_to category, method: :delete, data: { confirm: 'Are you sure?' } do %>
+                            Delete
+                        <% end %>
+                      </li>
+                    </ul>
+                  </div>
+                </td>
               </tr>
             <% end %>
           </tbody>
