--- a/app/views/categories/_form.html.erb
+++ b/app/views/categories/_form.html.erb
@@ -10,6 +10,10 @@
       </ul>
     </div>
   <% end %>
+  <div class="field">
+    <%= f.label :name, 'Category Name' %><br>
+    <%= f.text_field :name %>
+  </div>
 
   <div class="actions">
     <%= f.submit %>
